src/tests/test-src/errors/E74-mod-reserved-std.syntran
// E74: mod-reserved-std
// The module name `std` is reserved for the standard library

use std;
